added interactivity to terminal buttons

--- a/design/content/calhacks.html
+++ b/design/content/calhacks.html
@@ -48,7 +48,7 @@
     </h4>
         <div class="full-image"><img src="../../partials/images/design/chroadtrip.png"></div>
         <div class="content-text">
-            Every iteration of Cal Hacks getsw dressed in a new bear named <a>dd0ski</a> that represents UC Berkeley's mascot Oski.
+            Every iteration of Cal Hacks gets dressed in a new bear named <a>dd0ski</a> that represents UC Berkeley's mascot Oski.
             I designed the Cal Hacks 4.0 dd0ski &mdash; this little guy was featured on thousands of shirts, swag bags, badges,
             wristbands, and more!
         </div>
