--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
       href="https://fonts.googleapis.com/css?family=Nunito">
   <link rel="stylesheet" type="text/css"
       href="https://fonts.googleapis.com/css?family=Karla">
+  <!-- Google Material Icons -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <!-- Font Awesome Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- JQuery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <!-- AngularJS ngAnimate Google CDN -->
@@ -61,7 +65,22 @@
             <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" height="80px" viewBox="0 0 319.19 330.36"><defs><style>.cls-1{fill:#303030;}</style></defs><title>personal site</title><path class="cls-1" d="M250.08,124.08c3.58.48,7.08.8,10.52,1.44,15.63,2.88,29.29,9.65,40.53,21a60.49,60.49,0,0,1,17.59,37c1.44,13.19-.55,26-4.47,38.53A116.06,116.06,0,0,1,233.4,299.5c-11.84,3.09-23.54,2.58-34.76-2.74-7.55-3.58-13.85-8.66-17.71-16.23a63.26,63.26,0,0,1-5.4-16c-3.25-15.72-6.35-31.47-9.43-47.22-2.88-14.69-5.66-29.4-8.49-44.11-.24-1.25-.5-2.49-.79-3.92-1.95.87-3.8,1.67-5.63,2.52q-20.08,9.22-40.17,18.43a1.74,1.74,0,0,0-1.19,1.75c-.68,13.73-1.32,27.46-2.18,41.18a217,217,0,0,1-5.2,37.34A120.62,120.62,0,0,1,87,307.9,52.77,52.77,0,0,1,72,323.82c-8.78,5.83-18.46,7.57-28.76,6a48.72,48.72,0,0,1-27.1-13,50.32,50.32,0,0,1-13.4-23,75.45,75.45,0,0,1-2-30.64,109.58,109.58,0,0,1,10.2-34.53c7.07-14.43,17.49-26,30.41-35.38a228.08,228.08,0,0,1,31.06-18.74c5.62-2.86,11.3-5.6,17-8.37a1.4,1.4,0,0,0,.93-1.43c.23-9.11.37-18.22.81-27.32.57-11.65,1.35-23.3,2.1-34.94,1-16,1.63-24,1.91-26.78,1.33-13,4-32.52,12.41-48a25.43,25.43,0,0,1,9.1-10.18A24.91,24.91,0,0,1,130.15,14a16.79,16.79,0,0,1,5.66,1s5,1.92,9.65,8.3c.81,1.11.9,1.24.9,1.24.3.47.69.88,1,1.37.08.13.24.42.41.4s.17-.12.22-.2c.18-.28.45-.49.63-.77a63.75,63.75,0,0,1,4.67-5.25,58.71,58.71,0,0,1,6.29-5.44A74.71,74.71,0,0,1,191.46,1.17,61.34,61.34,0,0,1,221,2.53c13.08,4,23.21,12.08,31,23.14a80.63,80.63,0,0,1,13.68,34.68,85.48,85.48,0,0,1-3.38,41.27,76.41,76.41,0,0,1-11.48,21.46Zm-61.82,33.15c0,.42.06.73.13,1,2.91,14.11,5.89,28.21,8.72,42.34,1.78,8.93,3.33,17.9,5,26.85,1.51,8.24,3,16.5,4.54,24.73a24,24,0,0,0,3.95,9.94,12.34,12.34,0,0,0,9.94,5.53,31,31,0,0,0,13.59-2.86A88.63,88.63,0,0,0,266.34,242c9.84-11.08,17-23.58,18.69-38.63,1-8.46.61-16.85-2.07-25-2.07-6.33-5.22-12.1-10.45-16.35-11.87-9.63-25.78-13.15-40.79-13.07a130.67,130.67,0,0,0-21.77,2.36A153.8,153.8,0,0,0,188.26,157.23ZM157.81,38c.17.27.45.72.77,1.27a37.48,37.48,0,0,1,3.22,7.28C166.45,60.7,167,62.92,167,62.92c8.7,36.12,14.66,63.79,14.66,63.79.87,4,1.57,7.28,2,9.21l1.33-.55c4.41-1.86,8.81-3.77,13.25-5.56a24.33,24.33,0,0,0,5.87-3.41c6.77-5.26,13.42-10.65,18.48-17.68,11.8-16.4,15.82-34.35,10.22-54a39.55,39.55,0,0,0-15.65-22.06c-8.49-5.94-18.08-6.76-28-5.53a67.36,67.36,0,0,0-22.22,5.71A62.94,62.94,0,0,0,157.81,38Zm-69,163.38c-.46.2-.72.29-1,.42-5.63,3.11-11.33,6.09-16.86,9.37A95.14,95.14,0,0,0,49.44,228C35,243.58,29.83,262.17,31.68,283c.57,6.38,4,11,10.1,13.22,8.58,3.08,16.11,1,22.61-5.16,5.19-4.94,8.61-11.07,11.49-17.53,6.23-14,8.87-28.79,10.53-43.84.65-5.92,1.11-11.85,1.62-17.79C88.33,208.44,88.55,205,88.81,201.39Zm23.48-45.26a2.56,2.56,0,0,0,.3,0,372.66,372.66,0,0,0,38.91-11.93c.92-.34.83-.84.7-1.55-1.81-10.18-3.63-20.36-5.4-30.55-2.07-11.92-4.09-23.85-6.14-35.78a258.79,258.79,0,0,0-5.25-25.69,61.1,61.1,0,0,0-5.67-14.07c-1-1.72-1.3-1.76-3-.79a13.84,13.84,0,0,0-5.58,6.85,60.11,60.11,0,0,0-3.62,13.5,197.22,197.22,0,0,0-2.73,26.09c-.57,12.65-1.23,25.31-1.76,38-.34,8.22-.56,16.46-.77,24.69C112.22,148.57,112.3,152.32,112.3,156.13Z"/></svg>
         </div>
     </div>
-    <div class="terminal">
+
+    <div class="terminal-stay">
+      <div class="dropdown-content" style="display:block;position:absolute;left:75px;top:90px;text-align:center;font-size:18px;">
+        <a href="design/design.html" style="border-radius: 4px 4px 0 0;padding-top:15px;">Design</a>
+        <a href="code/code.html">Code</a>
+        <a href="prototyping/prototyping.html">Prototyping</a>
+        <a href="about/about.html" style="border-radius: 0 0 4px 4px;padding-bottom:15px;">About</a>
+        <div class="intro-button">
+            <i class="fa fa-chevron-up buffer" aria-hidden="true"></i>
+            <br>
+            <div class="eighteen">back to intro</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="terminal fe">
         <div class="terminal-header">
             <div class="circle-wrap">
                 <div class="circle magenta"></div>
@@ -69,6 +88,7 @@
                 <div class="circle lavender"></div>
             </div>
         </div>
+
         <div class="terminal-text">
             <div class="terminal-title">
                 Hello world!
@@ -105,36 +125,8 @@
 
 </div>
 
-
-
-
-
-
-  <!-- <a href="#!/home"class="close lavender" style="color:white">x</a> -->
-
-  <!--[if lt IE 7]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-  <![endif]-->
-
-  <!-- <div class="page" ng-view></div> -->
-
-  <!-- In production use:
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
-  -->
-  <script src="bower_components/angular/angular.js"></script>
-  <script src="bower_components/angular-route/angular-route.js"></script>
-  <script src="app.js"></script>
-  <script src="about/about.js"></script>
-  <script src="design/design.js"></script>
-  <script src="code/code.js"></script>
-  <script src="prototyping/prototyping.js"></script>
-  <script src="home/home.js"></script>
-  <script src="page1/page1.js"></script>
-  <script src="stubhub/stubhub.js"></script>
-  <script src="personalsite/personalsite.js"></script>
-  <script src="components/version/version.js"></script>
-  <script src="components/version/version-directive.js"></script>
-  <script src="components/version/interpolate-filter.js"></script>
+<script src="app.js"></script>
+<script src="about/about.js"></script>
 
 </body>
 </html>
