added new navbar, fixing responsive

--- a/about/about.html
+++ b/about/about.html
@@ -46,38 +46,48 @@
 </head>
 <body>
 
+  <div class="header">
+    <div class="header-container">
+      <a href="../index.html"><div class="navIcon"> <img src="../partials/images/logo-dab.png" style="height:50%;width:auto"> </div>
+      <a href="../about/about.html"><div class="navItem" style="padding-right:0"> About </div>
+      <a href="../prototyping/prototyping.html"><div class="navItem"> Prototyping </div>
+      <a href="../code/code.html"><div class="navItem"> Code </div></a>
+      <a href="../design/design.html"><div class="navItem"> Design </div> </a>
+    </div>
+  </div>
+
     <div class="container about-cont" style="display:none">
-        <a href="../index.html"class="close lavender" style="color:white">
+        <!-- <a href="../index.html"class="close lavender" style="color:white">
             <i class="fa fa-close close-icon"></i>
-        </a>
+        </a> -->
         <div class="about-elem about-text">
-            <span style="font-size: 20px;">Nice to meet you! <br>I'm <b class="hov">Adriana Babakanian</b>, a third-year
-            Regents' Scholar at the <a href="http://www.berkeley.edu/" target="_blank">
-            <em class="hov">University of California, Berkeley</em></a>
-            pursuing a double major in
-            <a href="https://math.berkeley.edu/" target="_blank"><em class="hov">Applied Mathematics</em></a>
-            and <a href="https://cs.berkeley.edu/" target="_blank"><em class="hov">Computer
-            Science</em></a>.</span>
-            <br>
-            <br>
-            I have a keen passion for creating, especially when it comes to
-            human-centered products that lie at the intersection of design &
-            technology.
-            <br>
-            <br>
-            You're likely to catch me with my nose in a book &#x1F4D6;,
-            sipping matcha &#x1F375;, hacking something up &#x1F4BB;,
-            doodling &#x1F3A8;, exploring SF &#x1F309;,
-            or in pursuit of tempura &#x1F364;.
+              <span style="font-size: 20px;">Nice to meet you! <br>I'm <b class="hov">Adriana Babakanian</b>, a third-year
+              Regents' Scholar at the <a href="http://www.berkeley.edu/" target="_blank">
+              <em class="hov">University of California, Berkeley</em></a>
+              pursuing a double major in
+              <a href="https://math.berkeley.edu/" target="_blank"><em class="hov">Applied Mathematics</em></a>
+              and <a href="https://cs.berkeley.edu/" target="_blank"><em class="hov">Computer
+              Science</em></a>.</span>
+              <br>
+              <br>
+              I have a keen passion for creating, especially when it comes to
+              human-centered products that lie at the intersection of design &
+              technology.
+              <br>
+              <br>
+              You're likely to catch me with my nose in a book &#x1F4D6;,
+              sipping matcha &#x1F375;, hacking something up &#x1F4BB;,
+              doodling &#x1F3A8;, exploring SF &#x1F309;,
+              or in pursuit of tempura &#x1F364;.
 
-            <!-- I've always been fascinated by the cognitive
-            intersection between the technical laws that construct
-            our everyday lives and the visual ways in which we perceive
-            them. This has lead me to explore and combine realms of
-            programming, mathematics, cognitive neuroscience, design,
-            and art. -->
+              <!-- I've always been fascinated by the cognitive
+              intersection between the technical laws that construct
+              our everyday lives and the visual ways in which we perceive
+              them. This has lead me to explore and combine realms of
+              programming, mathematics, cognitive neuroscience, design,
+              and art. -->
 
-        </div>
+          </div>
         <div class="about-elem about-photo">
             <div class="me-wrap"><img src="../partials/images/about/me2.jpg"></div>
             <div class="about-photo" style="margin-top:-100px;height:100px"></div>
