--- a/code/code.html
+++ b/code/code.html
@@ -33,28 +33,18 @@
 
 </head>
 
+<div class="header">
+  <div class="header-container">
+    <a href="../index.html"><div class="navIcon"> <img src="../partials/images/logo-dab.png" style="height:50%;width:auto"> </div>
+    <a href="../about/about.html"><div class="navItem" style="padding-right:0"> About </div>
+    <a href="../prototyping/prototyping.html"><div class="navItem"> Prototyping </div>
+    <a href="../code/code.html"><div class="navItem"> Code </div></a>
+    <a href="../design/design.html"><div class="navItem"> Design </div></a>
+  </div>
+</div>
+
 
 <div class="container">
-    <div class="dropdown_alt">
-      <div class="dropbtn_alt">
-          <div class="bar-cont_alt">
-              <div class="bar_alt"></div>
-              <div class="bar_alt"></div>
-              <div class="bar_alt" style="margin-bottom:0"></div>
-          </div>
-      </div>
-      <a href="../index.html">
-          <div class="home">
-              <i class="material-icons mat">home</i>
-          </div>
-      </a>
-      <div class="dropdown-content_alt">
-        <div class="point_alt"></div>
-        <a href="../design/design.html" style="border-radius: 4px 4px 0 0;padding-top:15px;">Design</a>
-        <a href="../prototyping/prototyping.html">Prototyping</a>
-        <a href="../about/about.html" style="border-radius: 0 0 4px 4px;padding-bottom:15px;">About</a>
-      </div>
-    </div>
 
     <h1 class="section-title"> Code</h1>
     <h4 class="section-subtitle"> Explorations of data-oriented UGC, interactive user interfaces,
