--- a/design/design.html
+++ b/design/design.html
@@ -36,9 +36,35 @@
 
 <body>
 
+<div class="box">
+  <a href="../about/about.html"><div class="navCoverItem"> About </div>
+  <a href="../prototyping/prototyping.html"><div class="navCoverItem"> Prototyping </div>
+  <a href="../code/code.html"><div class="navCoverItem"> Code </div></a>
+  <a href="../design/design.html"><div class="navCoverItem"> Design </div></a>
+</div>
+
+<div class="header">
+  <div class="header-container">
+    <a href="../index.html"><div class="navIcon"> <img src="../partials/images/logo-dab.png" style="height:50%;width:auto"> </div>
+    <a href="../about/about.html" class="navText"><div class="navItem" style="padding-right:0"> About </div>
+    <a href="../prototyping/prototyping.html" class="navText"><div class="navItem"> Prototyping </div>
+    <a href="../code/code.html" class="navText"><div class="navItem"> Code </div></a>
+    <a href="../design/design.html" class="navText"><div class="navItem"> Design </div> </a>
+  </div>
+  <div class="hider">
+    <div class="bar-cont_alt">
+        <div class="bar_alt"></div>
+        <div class="bar_alt"></div>
+        <div class="bar_alt" style="margin-bottom:0"></div>
+    </div>
+    </div>
+  </div>
+</div>
+
 <div class="container">
 <!-- <div class="fade" style="display:none"> -->
-  <div class="dropdown_alt">
+<!-- For reference to old navigation -->
+  <div class="dropdown_alt" style="display:none">
     <div class="dropbtn_alt">
         <div class="bar-cont_alt">
             <div class="bar_alt"></div>
@@ -65,6 +91,22 @@
     </h4>
 
   <!-- </div> -->
+        <a href="content/calhacksbrand.html" class="transition">
+          <div class="preview" style="background-color:#97D0ED">
+              <div class="preview-layover">
+                  CAL HACKS BRANDING
+              </div>
+              <img src="../partials/images/design/chbrand.png">
+          </div>
+        </a>
+        <a href="content/sushi.html" class="transition">
+          <div class="preview" style="background-color:#F59398">
+              <div class="preview-layover">
+                  BUSY BEARS
+              </div>
+              <img src="../partials/images/design/layout.png">
+          </div>
+        </a>
         <a href="content/calhacks.html" class="transition">
           <div class="preview" style="background-color:#c9d1eb">
               <div class="preview-layover">
