updated naigation for all pages

--- a/index.html
+++ b/index.html
@@ -38,14 +38,60 @@
   <script src="js/app.js"></script>
 
 </head>
+
+<div class="box">
+  <div class="close lavender navClose" style="color:white">
+      <i class="fa fa-close close-icon"></i>
+  </div>
+  <a href="../design/design.html"><div class="navCoverItem"  style="margin-top:80px"> Design </div></a>
+  <a href="../code/code.html"><div class="navCoverItem"> Code </div></a>
+  <a href="../prototyping/prototyping.html"><div class="navCoverItem"> Prototyping </div>
+  <a href="../about/about.html"><div class="navCoverItem"> About </div>
+  <div class="linker-wrap linkerWrapHome">
+      <a href="https://github.com/adrianababakanian" target="_blank">
+        <div class="linker whiteBack">
+            <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32.58 31.77"><defs><style>.cls-1{fill:#303030;fill-rule:evenodd;}</style></defs><title>git</title><path class="cls-1" d="M16.29,0a16.29,16.29,0,0,0-5.15,31.75c.81.15,1.11-.35,1.11-.79s0-1.41,0-2.77C7.7,29.18,6.74,26,6.74,26a4.31,4.31,0,0,0-1.81-2.38c-1.48-1,.11-1,.11-1a3.42,3.42,0,0,1,2.5,1.68,3.47,3.47,0,0,0,4.74,1.35,3.48,3.48,0,0,1,1-2.18C9.7,23.08,5.9,21.68,5.9,15.44a6.3,6.3,0,0,1,1.68-4.37,5.86,5.86,0,0,1,.16-4.31s1.37-.44,4.48,1.67a15.44,15.44,0,0,1,8.16,0c3.11-2.11,4.48-1.67,4.48-1.67A5.85,5.85,0,0,1,25,11.07a6.29,6.29,0,0,1,1.67,4.37c0,6.26-3.81,7.63-7.44,8a3.89,3.89,0,0,1,1.11,3c0,2.18,0,3.93,0,4.47s.29.94,1.12.78A16.29,16.29,0,0,0,16.29,0Z"/></svg>
+        </div>
+      </a>
+      <a href="https://www.linkedin.com/in/adriana-babakanian-60b597112/" target="_blank">
+        <div class="linker whiteBack">
+            <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 31.78 31.77"><defs><style>.cls-1{fill:#fff;}</style></defs><title>in</title><path class="cls-1" d="M15.9,0A15.89,15.89,0,1,1,0,15.86,15.84,15.84,0,0,1,15.9,0Zm1.56,13.83c0-.32,0-.65,0-1s-.07-.39-.37-.39c-1,0-2,0-3,0-.26,0-.36.08-.36.36q0,5.13,0,10.26c0,.25.05.35.32.35,1,0,2,0,3.06,0a2.63,2.63,0,0,0,.29,0V23q0-2.8,0-5.6A2.22,2.22,0,0,1,17.86,16a1.84,1.84,0,0,1,2-.75,1.6,1.6,0,0,1,1.22,1.44,5.34,5.34,0,0,1,.08.93c0,1.78,0,3.57,0,5.35,0,.47,0,.47.48.47.94,0,1.88,0,2.82,0,.33,0,.44-.09.43-.43,0-2,0-3.94,0-5.91a7.57,7.57,0,0,0-.21-1.71,3.91,3.91,0,0,0-4.56-3.12A3.74,3.74,0,0,0,17.46,13.83ZM11.89,18c0-1.69,0-3.38,0-5.08,0-.31-.08-.44-.41-.43-1,0-1.95,0-2.92,0-.29,0-.41.08-.41.39q0,5.09,0,10.19c0,.32.11.39.41.38,1,0,1.92,0,2.89,0,.36,0,.45-.11.45-.45C11.88,21.32,11.89,19.65,11.89,18Zm.22-8.78a1.94,1.94,0,0,0-2-1.95,1.94,1.94,0,1,0,0,3.86A2,2,0,0,0,12.11,9.2Z"/></svg>
+        </div>
+      </a>
+      <a href="https://www.pinterest.com/ababakanian/" target="_blank">
+        <div class="linker whiteBack">
+            <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 31.74 31.77"><defs><style>.cls-1{fill:#dab;}</style></defs><title>pin</title><path class="cls-1" d="M0,16.41q0-.53,0-1.06c.07-.57.14-1.15.21-1.72A15.85,15.85,0,1,1,19.44,31.34c-.82.18-1.66.29-2.49.43H14.83l-.61-.12-2.86-.49c1.7-2.35,2-5.07,2.75-7.65,1.79,2,4,2.18,6.36,1.43a7.76,7.76,0,0,0,4.23-3.43,12.71,12.71,0,0,0,1.84-6.06,8.83,8.83,0,0,0-4.34-8.59A11.08,11.08,0,0,0,14.13,5.5,10.49,10.49,0,0,0,6.86,10a8.92,8.92,0,0,0-1.06,8.7A4.61,4.61,0,0,0,8.28,21.3c.52.23.8.1,1-.45.1-.34.17-.68.27-1a1.29,1.29,0,0,0-.22-1.13,5.9,5.9,0,0,1-.89-1.94,7.13,7.13,0,0,1,2-6.38,8.16,8.16,0,0,1,8.87-1.71,5.23,5.23,0,0,1,3.28,4.18,12.2,12.2,0,0,1,0,3A9.42,9.42,0,0,1,20.63,21a4,4,0,0,1-2.25,1.49,2.51,2.51,0,0,1-3.17-3.2c.33-1.08.68-2.15.94-3.25a9.79,9.79,0,0,0,.36-2.44,2.11,2.11,0,0,0-3.14-1.88,3.28,3.28,0,0,0-1.63,1.74A4.82,4.82,0,0,0,11.48,17a5,5,0,0,1-.07,2.93c-.13.5-.25,1-.36,1.49-.49,2.18-1,4.36-1.45,6.55a17.18,17.18,0,0,0-.14,2.43l-.32-.13A15.65,15.65,0,0,1,.45,19.37C.22,18.4.14,17.4,0,16.41Z"/></svg>
+        </div>
+      </a>
+      <a href="mailto:ababakanian@berkeley.edu?Subject=Hello!" target="_blank">
+        <div class="linker whiteBack">
+            <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 27.94 27.94"><defs><style>.cls-1{fill:#dab;}</style></defs><title>mail</title><path class="cls-1" d="M14,0a14,14,0,1,0,14,14A14,14,0,0,0,14,0ZM5.08,7H22.84c0,.62,0,1.24,0,1.85,0,.08-.16.18-.26.23l-7.34,3.86c-.39.2-.77.42-1.16.6a.52.52,0,0,1-.4,0Q9.48,11.3,5.3,9a.41.41,0,0,1-.21-.27C5.07,8.2,5.08,7.61,5.08,7Zm17.76,4.35q0,4.1,0,8.2A1.3,1.3,0,0,1,21.42,21H6.5a1.28,1.28,0,0,1-1.42-1.34c0-2.85,0-5.69,0-8.54,0-.06,0-.13,0-.24l.48.25q4,2.13,7.94,4.27a.63.63,0,0,0,.69,0q4.09-2.17,8.19-4.32l.45-.22Z"/></svg>
+        </div>
+      </a>
+      <a href="https://dribbble.com/adrianababakanian" target="_blank">
+        <div class="linker whiteBack">
+            <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24.13 24.12"><defs><style>.cls-1{fill:#dab;}</style></defs><title>dribbble</title><path class="cls-1" d="M12.59,12.13l.29-.09c-.18-.42-.38-.84-.6-1.25a27.25,27.25,0,0,1-7.58,1c0,.07,0,.15,0,.22A7.37,7.37,0,0,0,6.59,17,11.76,11.76,0,0,1,12.59,12.13Z"/><path class="cls-1" d="M11.67,9.66A47.1,47.1,0,0,0,8.94,5.4a7.39,7.39,0,0,0-4.09,5.16A27.31,27.31,0,0,0,11.67,9.66Z"/><path class="cls-1" d="M14.15,11.38l.16.38a17.33,17.33,0,0,1,5.14.24,7.34,7.34,0,0,0-1.67-4.59,9.82,9.82,0,0,1-4.12,2.91C13.83,10.67,14,11,14.15,11.38Z"/><path class="cls-1" d="M17,6.56A7.36,7.36,0,0,0,12.07,4.7a7.66,7.66,0,0,0-1.73.2,38.8,38.8,0,0,1,2.75,4.31A8.36,8.36,0,0,0,17,6.56Z"/><path class="cls-1" d="M12.07,0A12.06,12.06,0,1,0,24.13,12.06,12.07,12.07,0,0,0,12.07,0Zm0,20.69h0a8.63,8.63,0,1,1,8.64-8.63A8.64,8.64,0,0,1,12.07,20.69Z"/><path class="cls-1" d="M13.38,13.27h0a10.13,10.13,0,0,0-5.79,4.6,7.35,7.35,0,0,0,4.53,1.55,7.21,7.21,0,0,0,2.88-.58A30.6,30.6,0,0,0,13.38,13.27Z"/><path class="cls-1" d="M14.75,12.92a31.48,31.48,0,0,1,1.43,5.25,7.33,7.33,0,0,0,3.16-4.93A10.88,10.88,0,0,0,14.75,12.92Z"/></svg>
+        </div>
+      </a>
+  </div>
+</div>
+
 <body style="background-color:rgba(221,170,187,0.2)">
-  <div class="header" style="background:rgba(242,241,243,0.2)">
+  <div class="fader"></div>
+  <div class="header homeHeader">
     <div class="header-container">
       <a href="index.html" class="stayPres"><div class="navIcon"> <img src="partials/images/logo2.png" style="height:50%;width:auto"> </div>
       <a href="about/about.html"><div class="navItem navItemAlt" style="padding-right:0"> About </div>
       <a href="prototyping/prototyping.html"><div class="navItem navItemAlt"> Prototyping </div>
       <a href="code/code.html"><div class="navItem navItemAlt"> Code </div></a>
       <a href="design/design.html"><div class="navItem navItemAlt"> Design </div></a>
+    </div>
+    <div class="hider">
+      <div class="bar-cont_alt">
+          <div class="bar_alt" style="background-color:#303030"></div>
+          <div class="bar_alt" style="background-color:#303030"></div>
+          <div class="bar_alt" style="background-color:#303030" style="margin-bottom:0"></div>
+      </div>
     </div>
   </div>
 
@@ -108,8 +154,7 @@
             </div>
             <div class="terminal-sub">
                 Feel free to explore my site for a synthesis of my projects and
-                experiences. Click on the menu icon at the top left to get
-                started!
+                experiences. You'll likely notice my love of art history, literature, and sushi along the way!
                 <!-- and
                 maybe even a few random geeky math riddles. -->
             </div>
@@ -128,6 +173,36 @@
               <span class="tooltiptext">scorpio</span>
             </div>
         </div>
+    </div>
+
+    <div class="footer">
+      <div class="linker-wrap linkerWrapHome">
+          <a href="https://github.com/adrianababakanian" target="_blank">
+            <div class="linker">
+                <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32.58 31.77"><defs><style>.cls-1{fill:#dab;fill-rule:evenodd;}</style></defs><title>git</title><path class="cls-1" d="M16.29,0a16.29,16.29,0,0,0-5.15,31.75c.81.15,1.11-.35,1.11-.79s0-1.41,0-2.77C7.7,29.18,6.74,26,6.74,26a4.31,4.31,0,0,0-1.81-2.38c-1.48-1,.11-1,.11-1a3.42,3.42,0,0,1,2.5,1.68,3.47,3.47,0,0,0,4.74,1.35,3.48,3.48,0,0,1,1-2.18C9.7,23.08,5.9,21.68,5.9,15.44a6.3,6.3,0,0,1,1.68-4.37,5.86,5.86,0,0,1,.16-4.31s1.37-.44,4.48,1.67a15.44,15.44,0,0,1,8.16,0c3.11-2.11,4.48-1.67,4.48-1.67A5.85,5.85,0,0,1,25,11.07a6.29,6.29,0,0,1,1.67,4.37c0,6.26-3.81,7.63-7.44,8a3.89,3.89,0,0,1,1.11,3c0,2.18,0,3.93,0,4.47s.29.94,1.12.78A16.29,16.29,0,0,0,16.29,0Z"/></svg>
+            </div>
+          </a>
+          <a href="https://www.linkedin.com/in/adriana-babakanian-60b597112/" target="_blank">
+            <div class="linker">
+                <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 31.78 31.77"><defs><style>.cls-1{fill:#dab;}</style></defs><title>in</title><path class="cls-1" d="M15.9,0A15.89,15.89,0,1,1,0,15.86,15.84,15.84,0,0,1,15.9,0Zm1.56,13.83c0-.32,0-.65,0-1s-.07-.39-.37-.39c-1,0-2,0-3,0-.26,0-.36.08-.36.36q0,5.13,0,10.26c0,.25.05.35.32.35,1,0,2,0,3.06,0a2.63,2.63,0,0,0,.29,0V23q0-2.8,0-5.6A2.22,2.22,0,0,1,17.86,16a1.84,1.84,0,0,1,2-.75,1.6,1.6,0,0,1,1.22,1.44,5.34,5.34,0,0,1,.08.93c0,1.78,0,3.57,0,5.35,0,.47,0,.47.48.47.94,0,1.88,0,2.82,0,.33,0,.44-.09.43-.43,0-2,0-3.94,0-5.91a7.57,7.57,0,0,0-.21-1.71,3.91,3.91,0,0,0-4.56-3.12A3.74,3.74,0,0,0,17.46,13.83ZM11.89,18c0-1.69,0-3.38,0-5.08,0-.31-.08-.44-.41-.43-1,0-1.95,0-2.92,0-.29,0-.41.08-.41.39q0,5.09,0,10.19c0,.32.11.39.41.38,1,0,1.92,0,2.89,0,.36,0,.45-.11.45-.45C11.88,21.32,11.89,19.65,11.89,18Zm.22-8.78a1.94,1.94,0,0,0-2-1.95,1.94,1.94,0,1,0,0,3.86A2,2,0,0,0,12.11,9.2Z"/></svg>
+            </div>
+          </a>
+          <a href="https://www.pinterest.com/ababakanian/" target="_blank">
+            <div class="linker">
+                <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 31.74 31.77"><defs><style>.cls-1{fill:#dab;}</style></defs><title>pin</title><path class="cls-1" d="M0,16.41q0-.53,0-1.06c.07-.57.14-1.15.21-1.72A15.85,15.85,0,1,1,19.44,31.34c-.82.18-1.66.29-2.49.43H14.83l-.61-.12-2.86-.49c1.7-2.35,2-5.07,2.75-7.65,1.79,2,4,2.18,6.36,1.43a7.76,7.76,0,0,0,4.23-3.43,12.71,12.71,0,0,0,1.84-6.06,8.83,8.83,0,0,0-4.34-8.59A11.08,11.08,0,0,0,14.13,5.5,10.49,10.49,0,0,0,6.86,10a8.92,8.92,0,0,0-1.06,8.7A4.61,4.61,0,0,0,8.28,21.3c.52.23.8.1,1-.45.1-.34.17-.68.27-1a1.29,1.29,0,0,0-.22-1.13,5.9,5.9,0,0,1-.89-1.94,7.13,7.13,0,0,1,2-6.38,8.16,8.16,0,0,1,8.87-1.71,5.23,5.23,0,0,1,3.28,4.18,12.2,12.2,0,0,1,0,3A9.42,9.42,0,0,1,20.63,21a4,4,0,0,1-2.25,1.49,2.51,2.51,0,0,1-3.17-3.2c.33-1.08.68-2.15.94-3.25a9.79,9.79,0,0,0,.36-2.44,2.11,2.11,0,0,0-3.14-1.88,3.28,3.28,0,0,0-1.63,1.74A4.82,4.82,0,0,0,11.48,17a5,5,0,0,1-.07,2.93c-.13.5-.25,1-.36,1.49-.49,2.18-1,4.36-1.45,6.55a17.18,17.18,0,0,0-.14,2.43l-.32-.13A15.65,15.65,0,0,1,.45,19.37C.22,18.4.14,17.4,0,16.41Z"/></svg>
+            </div>
+          </a>
+          <a href="mailto:ababakanian@berkeley.edu?Subject=Hello!" target="_blank">
+            <div class="linker">
+                <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 27.94 27.94"><defs><style>.cls-1{fill:#dab;}</style></defs><title>mail</title><path class="cls-1" d="M14,0a14,14,0,1,0,14,14A14,14,0,0,0,14,0ZM5.08,7H22.84c0,.62,0,1.24,0,1.85,0,.08-.16.18-.26.23l-7.34,3.86c-.39.2-.77.42-1.16.6a.52.52,0,0,1-.4,0Q9.48,11.3,5.3,9a.41.41,0,0,1-.21-.27C5.07,8.2,5.08,7.61,5.08,7Zm17.76,4.35q0,4.1,0,8.2A1.3,1.3,0,0,1,21.42,21H6.5a1.28,1.28,0,0,1-1.42-1.34c0-2.85,0-5.69,0-8.54,0-.06,0-.13,0-.24l.48.25q4,2.13,7.94,4.27a.63.63,0,0,0,.69,0q4.09-2.17,8.19-4.32l.45-.22Z"/></svg>
+            </div>
+          </a>
+          <a href="https://dribbble.com/adrianababakanian" target="_blank">
+            <div class="linker">
+                <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24.13 24.12"><defs><style>.cls-1{fill:#dab;}</style></defs><title>dribbble</title><path class="cls-1" d="M12.59,12.13l.29-.09c-.18-.42-.38-.84-.6-1.25a27.25,27.25,0,0,1-7.58,1c0,.07,0,.15,0,.22A7.37,7.37,0,0,0,6.59,17,11.76,11.76,0,0,1,12.59,12.13Z"/><path class="cls-1" d="M11.67,9.66A47.1,47.1,0,0,0,8.94,5.4a7.39,7.39,0,0,0-4.09,5.16A27.31,27.31,0,0,0,11.67,9.66Z"/><path class="cls-1" d="M14.15,11.38l.16.38a17.33,17.33,0,0,1,5.14.24,7.34,7.34,0,0,0-1.67-4.59,9.82,9.82,0,0,1-4.12,2.91C13.83,10.67,14,11,14.15,11.38Z"/><path class="cls-1" d="M17,6.56A7.36,7.36,0,0,0,12.07,4.7a7.66,7.66,0,0,0-1.73.2,38.8,38.8,0,0,1,2.75,4.31A8.36,8.36,0,0,0,17,6.56Z"/><path class="cls-1" d="M12.07,0A12.06,12.06,0,1,0,24.13,12.06,12.07,12.07,0,0,0,12.07,0Zm0,20.69h0a8.63,8.63,0,1,1,8.64-8.63A8.64,8.64,0,0,1,12.07,20.69Z"/><path class="cls-1" d="M13.38,13.27h0a10.13,10.13,0,0,0-5.79,4.6,7.35,7.35,0,0,0,4.53,1.55,7.21,7.21,0,0,0,2.88-.58A30.6,30.6,0,0,0,13.38,13.27Z"/><path class="cls-1" d="M14.75,12.92a31.48,31.48,0,0,1,1.43,5.25,7.33,7.33,0,0,0,3.16-4.93A10.88,10.88,0,0,0,14.75,12.92Z"/></svg>
+            </div>
+          </a>
+      </div>
     </div>
 
 </div>
